# replit-form

./: count.py  main.py  nominee.json  pyproject.toml
templates/: base.html  login.html  thanks.html  vote.html
