[tool.poetry]
name = "repl_python3_vote"
version = "0.1.0"
description = ""
authors = ["Nguyen Huy Hieu <devgade@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
replit = "^3.1.0"
WTForms = "^2.3.3"
gevent = "^21.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
